--- a/ordermng-db/pom.xml
+++ b/ordermng-db/pom.xml
@@ -49,15 +49,17 @@
       <scope>runtime</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.220</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.drevo.ordermng.core</groupId>
-      <artifactId>ordermng-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
   </dependencies>
 
